--- a/short-urls-api/.env.example
+++ b/short-urls-api/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=ShortUrlApp
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:6lZv51v/jOT71QN2zcJL2jIX9fR9UpibadMo+ipY+AM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=urlshortsdb
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
