--- a/short-urls-api/public/web.config
+++ b/short-urls-api/public/web.config
@@ -5,6 +5,13 @@
 -->
 <configuration>
   <system.webServer>
+    <httpProtocol>
+     <customHeaders>
+       <add name="Access-Control-Allow-Origin" value="*" />
+       <add name="Access-Control-Allow-Headers" value="Content-Type, Authorization" />
+       <add name="Access-Control-Allow-Methods" value="*" />
+     </customHeaders>
+   </httpProtocol>
     <rewrite>
       <rules>
         <rule name="Imported Rule 1" stopProcessing="true">
@@ -24,5 +31,13 @@
         </rule>
       </rules>
     </rewrite>
-  </system.webServer>
+        <staticContent>
+            <clientCache cacheControlMode="NoControl" />
+        </staticContent>
+        <defaultDocument>
+            <files>
+                <add value="index.php" />
+            </files>
+        </defaultDocument>
+   </system.webServer>
 </configuration>
